# Knee-MultiModality-Reg

./: .gitignore  CMakeLists.txt  Pipfile  fixed.txt  itkImageToPointSet.h  itkImageTopclPointCloud.h  itkImageTovtkPolyData.h  itkRegistration.cpp  lagacyCode  main.cpp  moving.txt  utils.h
